# controller/gin/api/auth.go
@@ -23,6 +23,13 @@ func NewAuthCtl(db *sql.DB) *AuthController {
 }
 
 // AddAuth -
+// @Summary Add a new user
+// @Description Add a new user for verification
+// @Produce json
+// @Param username query string true "username"
+// @Param password query string true "password"
+// @Success 200 {string} json "{"stauts":200,"message":"OK"}"
+// @Router /api/v1/add/auth [post]
 func (authCtl *AuthController) AddAuth(ctx *gin.Context) {
 	var (
 		req struct {
@@ -51,6 +58,14 @@ func (authCtl *AuthController) AddAuth(ctx *gin.Context) {
 }
 
 // ModifyPwd -
+// @Summary Modify user password
+// @Description Modify user password
+// @Produce json
+// @Param username query string true "Username"
+// @Param password query string true "PwdNew"
+// @Param confirm query string true "Confirm"
+// @Success 200 {string} json "{"stauts":200,"message":"OK"}"
+// @Router /api/v1/modifyPwd [put]
 func (authCtl *AuthController) ModifyPwd(ctx *gin.Context) {
 	var (
 		req struct {
@@ -84,7 +99,14 @@ func (authCtl *AuthController) ModifyPwd(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"status": http.StatusOK})
 }
 
-// Login - id != zero
+// Login -
+// @Summary User login
+// @Description User login
+// @Produce json
+// @Param username query string true "username"
+// @Param password query string true "password"
+// @Success 200 {string} json "{"stauts":200,"message":"OK"}"
+// @Router /api/v1/login [post]
 func (authCtl *AuthController) Login(ctx *gin.Context) (id int, err error) {
 	var (
 		req struct {
